# keyten

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
docs/plans/: 2026-05-12-k9-spec-implementation.md  2026-05-12-keyten-cli-architecture.md  2026-05-12-lambda-v1-1.md
examples/: calc.rs
keyten/: Cargo.toml
keyten-cli/: Cargo.toml  build.rs
keyten-cli/examples/: banner.rs
keyten-cli/src/: app.rs  banner.rs  completer.rs  eval_runner.rs  format.rs  highlighter.rs  history.rs  lib.rs  main.rs  names.rs  progress.rs  prompt.rs  sig.rs  syscmd.rs  sysinfo.rs  validator.rs
keyten-cli/src/tui/: input.rs  layout.rs  mod.rs  output.rs  status.rs  theme.rs
keyten-cli/tests/: pipeline.rs
keyten/benches/: bench_parallel.rs  bench_rc.rs
keyten/src/: adverb.rs  alloc.rs  ast.rs  bitvec.rs  chunk.rs  ctx.rs  exec.rs  kind.rs  lib.rs  madvise.rs  obj.rs  op.rs  render.rs  runtime.rs  sym.rs  temporal.rs  yield_now.rs
keyten/src/eval/: env.rs  mod.rs  tree.rs
keyten/src/kernels/: compare.rs  dict.rs  div.rs  dyad.rs  minmax.rs  minus.rs  mod.rs  monad.rs  plus.rs  setops.rs  til.rs  times.rs  underscore.rs
keyten/src/parallel/: mod.rs  partition.rs  reduce.rs
keyten/src/parse/: grammar.rs  lex.rs  mod.rs
keyten/tests/: adverb.rs  async_drive.rs  cancel.rs  layout.rs  nulls.rs  parallel.rs  parse_eval.rs  progress.rs  refcount.rs
src/: adverb.rs  alloc.rs  chunk.rs  ctx.rs  kind.rs  lib.rs  nulls.rs  obj.rs  op.rs  simd.rs
src/kernels/: div.rs  minus.rs  mod.rs  plus.rs  times.rs
tests/: arith.rs  mmap.rs
