[workspace]
resolver = "2"
members = ["keyten", "keyten-cli"]

[workspace.package]
edition = "2021"
rust-version = "1.80"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = "line-tables-only"
