[package]
name = "keyten-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "keyten"
path = "src/main.rs"

[dependencies]
keyten = { path = "../keyten" }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "sync", "signal", "time"] }
reedline = { version = "0.46", default-features = false }
nu-ansi-term = "0.50"
dirs = "5"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
