[package]
name = "keyten"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
libc = "0.2"
tokio = { version = "1", default-features = false, features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time", "sync"] }

[[example]]
name = "calc"
path = "examples/calc.rs"
